add_subdirectory(alac)
add_subdirectory(modules)

add_library(libaudiofile STATIC
  AIFF.cpp
  AIFF.h
  AVR.cpp
  AVR.h
  AudioFormat.cpp
  AudioFormat.h
  Buffer.cpp
  Buffer.h
  CAF.cpp
  CAF.h
  Compiler.h
  FLACFile.cpp
  FLACFile.h
  Features.h
  File.cpp
  File.h
  FileHandle.cpp
  FileHandle.h
  IFF.cpp
  IFF.h
  IRCAM.cpp
  IRCAM.h
  Instrument.cpp
  Instrument.h
  Loop.cpp
  Marker.cpp
  Marker.h
  Miscellaneous.cpp
  NIST.cpp
  NIST.h
  NeXT.cpp
  NeXT.h
  PacketTable.cpp
  PacketTable.h
  Raw.cpp
  Raw.h
  SampleVision.cpp
  SampleVision.h
  Setup.cpp
  Setup.h
  Shared.h
  Tag.h
  Track.cpp
  Track.h
  UUID.cpp
  UUID.h
  VOC.cpp
  VOC.h
  WAVE.cpp
  WAVE.h
  aes.cpp
  af_vfs.cpp
  af_vfs.h
  afinternal.h
  aupv.c
  aupvinternal.h
  aupvlist.h
  byteorder.h
  byteorder.h
  compression.cpp
  compression.h
  data.cpp
  debug.cpp
  debug.h
  error.c
  error.h
  extended.c
  extended.h
  format.cpp
  g711.c
  g711.h
  openclose.cpp
  pcm.cpp
  pcm.h
  query.cpp
  units.cpp
  units.h
  util.cpp
  util.h
  util.h
)

